<menu xmlns:android="http://schemas.android.com/apk/res/android"
	  xmlns:tools="http://schemas.android.com/tools"
	  tools:context=".MainActivity">

	<item android:id="@+id/mi_action_start_stop_process"
		  android:title="@string/menu_start_msr"
		  android:orderInCategory="100"
		  android:showAsAction="ifRoom"
		  android:icon="@mipmap/ic_start_process_turn_off"
		/>

	<item android:id="@+id/mi_action_record"
		  android:title="@string/menu_record"
		  android:orderInCategory="100"
		  android:showAsAction="ifRoom"
		  android:icon="@mipmap/ic_recording_turn_off"
		/>

	<item android:id="@+id/mi_action_refresh"
		  android:title="@string/menu_refresh_conn"
		  android:orderInCategory="100"
		  android:showAsAction="ifRoom"
		  android:icon="@mipmap/ic_refresh_conn"
		/>

	<item android:id="@+id/mi_action_settings"
		  android:title="@string/menu_settings"
		  android:orderInCategory="100"
		  android:showAsAction="ifRoom"
		  android:icon="@mipmap/ic_settings"
		/>
</menu>
