<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				xmlns:tools="http://schemas.android.com/tools"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:paddingLeft="@dimen/activity_horizontal_margin"
				android:paddingRight="@dimen/activity_horizontal_margin"
				android:paddingTop="@dimen/activity_vertical_margin"
				android:paddingBottom="@dimen/activity_vertical_margin"
				tools:context="edu.sintez.loggermobile.app.SettingsActivity">

	<TextView
		android:id="@+id/tv_settings_tooltip_mcu_device_address"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/activity_settings_tooltip_mcu_device_address"
		/>

	<EditText
		android:id="@+id/et_address"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/tv_settings_tooltip_mcu_device_address"
		android:textSize="22sp"
		android:ems="10"
		android:layout_centerHorizontal="true"
		/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_below="@id/et_address"
		>

		<Button
			android:id="@+id/btn_save_settings"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/activity_settings_btn_save"
			android:textSize="22sp"
			android:layout_weight="0.5"
			/>

		<Button
			android:id="@+id/btn_cancel_settings"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/activity_settings_btn_cancel"
			android:textSize="22sp"
			android:layout_weight="0.5"
			/>

	</LinearLayout>


</RelativeLayout>
